2010-08-19  Jan Djärv  <jan.h.d@swipnet.se>

	* nsselect.m (nxatoms_of_nsselect): Use "Selection" and "Secondary".

2010-08-18  Eli Zaretskii  <eliz@gnu.org>

	* xterm.c (x_draw_bar_cursor):
	* w32term.c (x_draw_bar_cursor): If the character under cursor is
	R2L, draw the bar cursor on its right rather than on its left.

2010-08-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* eval.c (Fdefmacro): Only obey one declaration.

	* casefiddle.c (casify_region): Setup gl_state.

2010-08-18  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (ns_define_frame_cursor): Call x_update_cursor (Bug#6868).

2010-08-18  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (update_frame_tool_bar): Literal stings are const char*.

2010-08-18  David De La Harpe Golden  <david@harpegolden.net>

	* nsselect.m (QCLIPBOARD, NXPrimaryPboard): Define.
	(symbol_to_nsstring): Map QCLIPBOARD => NSGeneralPboard,
	QPRIMARY => NXPrimaryPboard.
	(ns_string_to_symbol): NSGeneralPboard => QCLIPBOARD,
	NXPrimaryPboard => QPRIMARY.
	(nxatoms_of_nsselect): NXPrimaryPboard = PrimarySelection,
	NXSecondaryPboard = SecondarySelection.
	(syms_of_nsselect): Intern QCLIPBOARD (Bug#6677).

2010-08-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gtkutil.c (update_frame_tool_bar): Don't assume TOOL_BAR_ITEM_LABEL
	is a string.

2010-08-17  Jan Djärv  <jan.h.d@swipnet.se>

	* nsfns.m (ns_frame_parm_handlers): Add a slot for the
	x_set_tool_bar_position handler.

2010-08-17  Eli Zaretskii  <eliz@gnu.org>

	* w32fns.c <w32_frame_parm_handlers>: Add a slot for the
	x_set_tool_bar_position handler, needed to support changes from
	2010-07-29 (revno 100939) for positioning the tool bar.  (Bug#6796)

2010-08-16  Jan Djärv  <jan.h.d@swipnet.se>

	* nsselect.m: include keyboard.h for QPRIMARY, remove its
	declaration (Bug#6863).
	(syms_of_nsselect): Don't intern QPRIMARY.

	* xselect.c: Remove declaration of QPRIMARY (Bug#6864).

	* keyboard.h (QPRIMARY): Declare (Bug#6864).

2010-08-16  Chong Yidong  <cyd@stupidchicken.com>
